jszt/ingress/star_open_onewo_public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  name: demo-app-public
spec:
  tls:
  - hosts:   
    - demo.open.onewo.com
    secretName: wildcard.open.onewo.com-tls
  rules:
  - host: demo.open.onewo.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: demo-app
            port:
              number: 8080
        pathType: ImplementationSpecific
